# rag-beyond-the-basics

./: .cursorignore  .env.example  .gitignore  Dockerfile  Dockerfile.dockerignore  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.chainlit/: config.toml
.chainlit/translations/: bn.json  en-US.json  gu.json  he-IL.json  hi.json  ja.json  kn.json  ml.json  mr.json  nl.json  ta.json  te.json  zh-CN.json
data/raw/book/: frank_hardys_choice.txt
data/vector_stores/book_3/: chroma.sqlite3
docs/: 404.html  index.html
docs-src/: index.md
docs-src/setup/: deep-diver-containerized.md  deep-diver-native.md  lifeguard.md  swimmer.md
docs/search/: search_index.json
docs/setup/deep-diver-containerized/: index.html
docs/setup/deep-diver-native/: index.html
docs/setup/lifeguard/: index.html
docs/setup/swimmer/: index.html
scripts/: check_git.sh  check_pip.sh  check_python.sh  check_shell.sh  check_tools.sh  check_venv.sh  docker_cleanup.sh
src/: __init__.py
src/main/: arxiv_1.py  arxiv_2.py  book_1.py  book_2.py  book_3.py  book_4.py  book_5.py  book_6.py  general_1.py  nobels_1.py  rag.py  router_1.py
src/main/rag/: agent_1.py  book_1.py  book_2.py  book_3.py  book_4.py  book_6.py  router_1.py
src/main/util/: chat_cli.py  chat_gui.py  cli.py  git.py  llm_factory.py  log.py  rag_loader.py  responses.py  splash.py
src/test/: metrics.py  runner.py  suite_agent.py  suite_arxiv_comparative.py  suite_book_A.py  suite_book_A_mini.py  suite_book_B.py  suite_book_B_mini.py  suite_general_A.py  suite_general_A_mini.py  suite_nobels_A.py
(+3 files in other folders)
