[tool.poetry]
name = "rag-beyond-the-basics"
version = "0.1.0"
description = ""
authors = ["Adam Hosman <github@adamsinbox.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.13" # Keep in sync w/ Dockerfile & .tool-versions
python-dotenv = "^1.1.0"
openai = "^1.86.0"
langchain-openai = "^0.3.23"
langgraph = "^0.4.8"
bs4 = "^0.0.2"
langchain = "^0.3.25"
langchain-chroma = "^0.2.4"
langchain-community = "^0.3.25"
langchain-text-splitters = "^0.3.8"
deepeval = "^3.1.0"
click = "8.1.7"
rank-bm25 = "^0.2.2"
chainlit = "^2.5.5"
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.14"
langchain-tavily = "^0.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
ws = "src.main.util.cli:ws"
